2024-11-16  Bruno Haible  <bruno@clisp.org>

	Avoid "-Wzero-as-null-pointer-constant" warnings on the generated code.
	Reported in
	<https://lists.gnu.org/archive/html/bug-gnulib/2024-11/msg00123.html>.
	* src/output.cc (Output::output_lookup_function_body): To denote a null
	pointer, emit a cast expression instead of plain "0".
	* tests/c-parse.exp, tests/charsets.exp, tests/chill.exp,
	tests/cplusplus.exp, tests/gpc.exp, tests/incomplete.exp,
	tests/java.exp, tests/languages.exp, tests/modula2.exp, tests/objc.exp,
	tests/permut2.exp, tests/permut3.exp, tests/permutc2.exp,
	tests/test-4.exp: Update.

2024-10-28  Bruno Haible  <bruno@clisp.org>

	doc: Improve text rendering in PDF output.
	Suggested by Collin Funk <collin.funk1@gmail.com> in
	<https://lists.gnu.org/archive/html/bug-gperf/2024-10/msg00000.html>.
	* doc/texinfo.tex: Update from the texinfo-7.1 release.
	* doc/gperf.texi: Override the colour for interactive links. Bump date.

2024-09-01  Bruno Haible  <bruno@clisp.org>

	Replace FSF snail-mail addresses with URLs.
	* tests/java.gperf: Update GPL license notice.
	* tests/java.exp: Likewise.

2024-07-22  Bruno Haible  <bruno@clisp.org>

	build: Simplify last change.
	* Makefile.in (doc/gperf.1): Simplify rule.

2024-07-21  Bruno Haible  <bruno@clisp.org>

	build: Fix failure of "./configure; make dist".
	* Makefile.in (srcdir, VPATH): New variables.
	(VERSION): Refer to src/version.cc in $(srcdir).
	(dist): Depend on doc/gperf.1.
	(doc/gperf.1): New rule.
	* doc/Makefile.in (DISTRIBUTED_BUILT_FILES): Remove wildcard patterns.
	(DISTRIBUTED_BUILT_FILES_EXTRA_PATTERNS): New variable.
	(distdir): Handle the files from DISTRIBUTED_BUILT_FILES_EXTRA_PATTERNS.

2024-07-21  Bruno Haible  <bruno@clisp.org>

	build: Don't leave an empty gperf.1 on disk if help2man fails.
	* doc/Makefile.in (gperf.1): Use a temporary file.
	(clean): Remove this temporary file.

2024-07-21  Bruno Haible  <bruno@clisp.org>

	build: Fix VPATH builds.